--- a/app/views/paths/community.html.haml
+++ b/app/views/paths/community.html.haml
@@ -26,7 +26,7 @@
   %div.row
     %div.span5
       %div.leftbox.newsfeed{ style: "min-height: 361px;" }
-        %div.leftboxheader Leaderboard
+        %div.leftboxheader{style: "padding: 10px 12px; "} Leaderboard
         %ul#ranks
           - @leaderboards.each_with_index do |entry, i|
             %li
